// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with expenses 1`] = `
<div>
  <h1>
    viewing 
    3
     
    expenses 
     totalling 
    $7,508.54
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with one expense 1`] = `
<div>
  <h1>
    viewing 
    1
     
    expense 
     totalling 
    $504.55
  </h1>
</div>
`;
